created tabs for each muscle group with image

--- a/src/App.css
+++ b/src/App.css
@@ -12,43 +12,28 @@
   }
  }
 
- ul.nav {
+ .tabs {
   width: 80%;
   margin: 0 auto 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border: 1px solid #9ba0a3;
-  border-radius: 2rem;
   padding-left: 0px;
   @media (max-width: 768px) {
     width: 90%;
   }
 }
-ul.nav li {
+.tabs-item {
   width: 50%;
   padding: 1rem;
   list-style: none;
   text-align: center;
   cursor: pointer;
   transition: all 0.7s;
-  border-bottom-left-radius: 2rem;
-  border-top-left-radius: 2rem;
 }
-ul.nav li:first-child {
-  border-bottom-left-radius: 2rem;
-  border-top-left-radius: 2rem;
-}
- 
-ul.nav li:last-child {
-  border-bottom-right-radius: 2rem;
-  border-top-right-radius: 2rem;
-}
-ul.nav li:hover {
+.tabs-item:hover {
   background: rgba(186, 190, 189, 0.15);
-}
-ul.nav li.active {
-  background: #9ba0a3;
 }
 
 .muscleimg{
