--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+/* NAV BAR STYLING */
+
+
+
+/* END OF NAVBAR STYLING */
+
+/* BODY PARTS STYLING */
+
 .muscle-tabs{
   width: 80%;
   height: auto;
@@ -45,3 +53,4 @@
   margin-left: auto;
   border-radius: 50%;
 }
+/* END OF BODY PARTS STYLING */
