--- a/src/components/calorie-meter/bmr.css
+++ b/src/components/calorie-meter/bmr.css
@@ -83,18 +83,18 @@ input[type="submit"] {
   font-family: "Open Sans", sans-serif;
   font-size: 15px;
 }
-button {
+ .buttonstyle {
   display: block;
   width: 100%;
   padding: 10px 1px;
-  background: black;
+  background: rgba(213, 11, 11, 0.854);
   color: white;
   border: none;
   font-family: "Open Sans", sans-serif;
   text-transform: uppercase;
   cursor: pointer;
   font-size: 16px;
-}
+} 
 select {
   padding: 10px 10px;
   width: 100%;
