--- a/src/components/calorie-meter/bmr.css
+++ b/src/components/calorie-meter/bmr.css
@@ -83,7 +83,7 @@ input[type="submit"] {
   font-family: "Open Sans", sans-serif;
   font-size: 15px;
 }
-button {
+.buttonstyle {
   display: block;
   width: 100%;
   padding: 10px 1px;
